# impstall

./: setup.cfg  setup.py  tests.py
impstall/: __init__.py  _pyi_hooks.py  core.py
impstall/hooks/: hook-pip.py
utils/: release.py
