[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1
[metadata]
name = impstall
version = 0.3.1
author = Ryan Niehaus
author_email = ryan.niehaus@gmail.com
description = This module can be used to import python packages and install them if not already installed
long_description = file: README.rst
long_description_content_type = text/markdown


classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = .

[options.packages.find]
where = .